# cfa-genomic-lag-effect

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  mkdocs.yml  pyproject.toml
.github/workflows/: run-pytest.yaml
docs/: api.md  index.md  model.md  pipeline.md  refs.bib
lag/: __init__.py  coalescent.py  data.py  lag.py  models.py  renewal.py  utils.py
pipeline/: analyze.py  bhsqi.py  config.json  example_config.json  fit_lag.py  fit_lags.py  generate_incidence.py  generate_infections.py  generate_prevalence.py  lag_fit_demo.py  plot_coalescent_math.py  plot_coalescent_rate.py  plot_infections.py  plot_lag.py  plot_rt.py  setup.sh  simulate_data.py  simulate_rt.py  summarize.py  utils.py
scripts/: bhsqi.py  example_config.json  fit_lag.py
tests/: test_coalescent.py  test_data.py  test_model.py
