[tool.poetry]
name = "lag"
version = "0.1.0"
description = ""
authors = ["afmagee42 <rzg0@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
numpyro = "^0.17.0"
jax = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
